Plack::Test::Suite passing, docs written

--- a/weaver.ini
+++ b/weaver.ini
@@ -7,6 +7,9 @@
 [Generic / DESCRIPTION]
 [Generic / OVERVIEW]
 
+[Collect / CLASS_METHODS]
+command = class_method
+
 [Collect / PUBLIC_ATTRIBUTES]
 command = attribute_public
 [Collect / PROTECTED_ATTRIBUTES]
