Need a manual prereq because of the fancy excludes, also clean up POD

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,8 @@ abstract                            = Encapsulated PSGI server behaviors for POE
 [AutoVersion]
 [PodWeaver]
 [AutoPrereq]
+[Prereq]
+POEx::Role::TCPServer = 0
 [NextRelease]
 [MetaResources]
 repository                          = git://github.com/nperez/poex-role-psgiserver.git
