--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,12 @@ license                             = Perl_5
 copyright_holder                    = Infinity Interactive
 abstract                            = Encapsulated PSGI server behaviors for POE
 
-[@Classic]
+[@Basic]
 [AutoVersion]
 [PodWeaver]
-[AutoPrereq]
-[Prereq]
-POEx::Role::TCPServer = 0
+[AutoPrereqs]
+[Prereqs]
+POEx::Role::TCPServer = 1.102740
 [NextRelease]
 [MetaResources]
 repository                          = git://github.com/nperez/poex-role-psgiserver.git
