Ugh, version problems again. I hate autoversion.

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ abstract                            = Encapsulated PSGI server behaviors for POE
 
 [@Basic]
 [AutoVersion]
+[PkgVersion]
 [PodWeaver]
 [AutoPrereqs]
 [Prereqs]
