--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,8 @@ abstract                            = Encapsulated PSGI server behaviors for POE
 [PodWeaver]
 [AutoPrereqs]
 [Prereqs]
-POEx::Role::TCPServer = 1.102740
+POEx::Role::TCPServer     = 1.102740
+POE::Filter::HTTP::Parser = 1.06
 [NextRelease]
 [MetaResources]
 repository                          = git://github.com/nperez/poex-role-psgiserver.git
